--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Nadine Marcus</h1>
     <p>Girls U8 Soccer Coach, Associate Data Engineer, Incoming Data Science Master</p>
+
+    <img src=images.wash_avocados.jpg 
+        alt="Apparently, scientists are now questioning whether we should wash avocados...">
 </body>
 </html>
