--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nadine Marcus: Personal site and portfolio</title>
-    <link href="style.css" />
+    <link href="/style.css" />
 </head>
 <body>
     <h1>Nadine Marcus</h1>
     <p>Girls U8 Soccer Coach, Associate Data Engineer, Incoming Data Science Master</p>
 
-    <img src="images/wash_avocados.jpg"
-        alt="Apparently, scientists are now questioning whether we should wash avocados..."/>
+    <img src="/images/wash_avocados.jpg"
+         alt="Apparently, scientists are now questioning whether we should wash avocados..."/>
 </body>
 </html>
