--- a/projects/index.html
+++ b/projects/index.html
@@ -6,6 +6,12 @@
     <title>projects</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>projects index page</h1>
+    <nav>
+        <a href="/index.html">Home</a> |
+        <a href="/projects/index.html">Projects</a> |
+        <a href="/contact/index.html">Contact</a> |
+        <a href="https://github.com/your-username" target="_blank">GitHub</a>
+    </nav>
 </body>
 </html>
