--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nadine Marcus: Personal site and portfolio</title>
-    <link href="/style.css" />
+    <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
+    <nav>
+        <a href="/index.html">Home</a> |
+        <a href="/projects/index.html">Projects</a> |
+        <a href="/contact/index.html">Contact</a> |
+        <a href="https://github.com/your-username" target="_blank">GitHub</a>
+    </nav>
+
     <h1>Nadine Marcus</h1>
     <p>Girls U8 Soccer Coach, Associate Data Engineer, Incoming Data Science Master</p>
 
