--- a/contact/index.html
+++ b/contact/index.html
@@ -14,5 +14,30 @@
     </nav>
     <h1>Contact</h1>
     <p>You can reach me at: nadinemarcus2002@gmail.com</p>
+
+    <h2>Contact Me</h2>
+
+<form action="mailto:nadinemarcus2002@gmail.com" method="POST" enctype="text/plain">
+  <label>
+    Your Email:
+    <input type="email" name="email" required>
+  </label>
+  <br><br>
+
+  <label>
+    Subject:
+    <input name="subject" required>
+  </label>
+  <br><br>
+
+  <label>
+    Message:
+    <textarea name="body" rows="5" cols="30" required></textarea>
+  </label>
+  <br><br>
+
+  <button>Send</button>
+</form>
+
 </body>
 </html>
