--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@
         <a href="/index.html">Home</a> |
         <a href="/projects/index.html">Projects</a> |
         <a href="/contact/index.html">Contact</a> |
-        <a href="https://github.com/your-username" target="_blank">GitHub</a>
+        <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
     <h1>Contact</h1>
     <p>You can reach me at: nadinemarcus2002@gmail.com</p>
