--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="/index.html">Home</a> |
         <a href="/projects/index.html">Projects</a> |
         <a href="/contact/index.html">Contact</a> |
-        <a href="https://github.com/your-username" target="_blank">GitHub</a>
+        <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
 
     <h1>Nadine Marcus</h1>
