--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <nav>
-        <a href="/index.html">Home</a> |
-        <a href="/projects/index.html">Projects</a> |
-        <a href="/contact/index.html">Contact</a> |
+        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/index.html">Home</a> |
+        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/projects/index.html">Projects</a> |
+        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/contact/index.html">Contact</a> |
         <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
 
