--- a/contact/index.html
+++ b/contact/index.html
@@ -8,8 +8,8 @@
 <body>
     <nav>
         <a href="/">Home</a> |
-        <a href="/projects/index.html">Projects</a> |
-        <a href="/contact/index.html">Contact</a> |
+        <a href="/projects">Projects</a> |
+        <a href="/contact">Contact</a> |
         <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
     <h1>Contact</h1>
