--- a/contact/index.html
+++ b/contact/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <nav>
-        <a href="/">Home</a> |
-        <a href="/projects">Projects</a> |
-        <a href="/contact">Contact</a> |
+        <a href="/index.html">Home</a> |
+        <a href="/projects/">Projects</a> |
+        <a href="/contact/">Contact</a> |
         <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
     <h1>Contact</h1>
