--- a/contact/index.html
+++ b/contact/index.html
@@ -7,13 +7,12 @@
 </head>
 <body>
     <nav>
-        <a href="/index.html">Home</a> |
-        <a href="/projects/">Projects</a> |
-        <a href="/contact/">Contact</a> |
+        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/">Home</a> |
+        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/projects/">Projects</a> |
+        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/contact/">Contact</a> |
         <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
     <h1>Contact</h1>
-    <p>You can reach me at: nadinemarcus2002@gmail.com</p>
 
     <h2>Contact Me</h2>
 
@@ -32,11 +31,11 @@
 
   <label>
     Message:
-    <textarea name="body" rows="5" cols="30" required></textarea>
+    <textarea name="body" rows="5" cols="30" ></textarea>
   </label>
   <br><br>
 
-  <button>Send</button>
+  <button>Submit</button>
 </form>
 
 </body>
