--- a/projects/index.html
+++ b/projects/index.html
@@ -6,12 +6,18 @@
     <title>projects</title>
 </head>
 <body>
-    <h1>projects index page</h1>
+    <h1>Projects Page</h1>
     <nav>
-        <a href="/index.html">Home</a> |
-        <a href="/projects/index.html">Projects</a> |
-        <a href="/contact/index.html">Contact</a> |
-        <a href="https://github.com/your-username" target="_blank">GitHub</a>
+        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/">Home</a> |
+        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/projects/">Projects</a> |
+        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/contact/">Contact</a> |
+        <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
+    <h2>Resume</h2>
+    <p>
+        <a href="NadineMarcus_Resume.pdf" target="_blank">
+            <button>View my Resume!</button>
+        </a>
+    </p>
 </body>
 </html>
