--- a/contact/index.html
+++ b/contact/index.html
@@ -12,25 +12,23 @@
         <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/contact/">Contact</a> |
         <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
-    <h1>Contact</h1>
-
-    <h2>Contact Me</h2>
+    <h1>Contact</h1>]
 
 <form action="mailto:nadinemarcus2002@gmail.com" method="POST" enctype="text/plain">
   <label>
-    Your Email:
+    Email:    
     <input type="email" name="email" required>
   </label>
   <br><br>
 
   <label>
-    Subject:
+    Subject:    
     <input name="subject" required>
   </label>
   <br><br>
 
   <label>
-    Message:
+    Message:    
     <textarea name="body" rows="5" cols="30" ></textarea>
   </label>
   <br><br>
