--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>Girls U8 Soccer Coach, Associate Data Engineer, Incoming Data Science Master</p>
 
     <img 
-        src="/images/wash_avocados.jpg"
+        src="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/images/wash_avocados.jpg"
         alt="Apparently, scientists are now questioning whether we should wash avocados..." />
 </body>
 </html>
