--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 
     <img 
         src="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/images/wash_avocados.jpg"
-        alt="Apparently, scientists are now questioning whether we should wash avocados..." />
+        alt="Apparently, experts are now questioning whether we should wash avocados..." />
 </body>
 </html>
