--- a/contact/index.html
+++ b/contact/index.html
@@ -9,6 +9,7 @@
     <nav>
         <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/">Home</a> |
         <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/projects/">Projects</a> |
+        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/resume/" target="_blank">Resume</a> |
         <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/contact/">Contact</a> |
         <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
