--- a/resume/index.html
+++ b/resume/index.html
@@ -13,7 +13,9 @@
         <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
     <h3>Check out my Resume!</h3>
-  <iframe src="NadineMarcus_Resume.pdf"></iframe>
+  <iframe width : 70%;
+          height: 800px;
+          src="NadineMarcus_Resume.pdf"></iframe>
     <p>
         <a href="NadineMarcus_Resume.pdf" target="_blank">
             <button>View my Resume!</button>
