--- a/resume/index.html
+++ b/resume/index.html
@@ -14,8 +14,8 @@
         <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
     <h3>Check out my Resume!</h3>
-  <iframe width : 70%;
-          height: 800px;
+  <iframe style="width: 70%;
+          height: 800px;";
           src="NadineMarcus_Resume.pdf"></iframe>
     <p>
         <a href="NadineMarcus_Resume.pdf" target="_blank">
