--- a/resume/index.html
+++ b/resume/index.html
@@ -14,9 +14,7 @@
         <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
     <h3>Check out my Resume!</h3>
-  <iframe style="width: 70%;
-          height: 800px;";
-          src="NadineMarcus_Resume.pdf"></iframe>
+  <iframe src="NadineMarcus_Resume.pdf" style="width:70%; height:1200px;"></iframe>
     <p>
         <a href="NadineMarcus_Resume.pdf" target="_blank">
             <button>View my Resume!</button>
