--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nadine Marcus: Personal site and portfolio</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <nav>
-        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/">Home</a> |
-        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/projects/">Projects</a> |
-        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/resume/">Resume</a> |
-        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/contact/">Contact</a> |
+        <a href="../" class="current">Home</a> |
+        <a href="projects/index.html">Projects</a> |
+        <a href="resume/index.html">Resume</a> |
+        <a href="contact/index.html">Contact</a> |
         <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
 
