--- a/projects/index.html
+++ b/projects/index.html
@@ -3,22 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>projects</title>
+    <title>Projects</title>
+    <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-    <h1>Projects Page</h1>
     <nav>
-        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/">Home</a> |
-        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/projects/">Projects</a> |
-        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/resume/">Resume</a> |
-        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/contact/">Contact</a> |
+        <a href="/index.html">Home</a> |
+        <a href="/projects/index.html" class="current">Projects</a> |
+        <a href="/resume/index.html">Resume</a> |
+        <a href="/contact/index.html">Contact</a> |
         <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
     </nav>
-    <h2>Resume</h2>
-    <p>
-        <a href="NadineMarcus_Resume.pdf" target="_blank">
-            <button>View my Resume!</button>
-        </a>
-    </p>
+    <h1>Projects Page</h1>
+    <div class="projects">
+        <article>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum laborum, est aut consequatur itaque assumenda. Inventore earum beatae est labore sed, in optio nostrum corporis at dignissimos atque possimus rerum.</p>
+        </article>
+        <article>
+            <h2>Et sit similique dicta.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Molestias saepe praesentium provident! Quibusdam totam consectetur unde recusandae quam tempora, ea deleniti dolor, ab eum quos repellat iste neque. Pariatur amet ab, vel ratione necessitatibus tempora deleniti officiis. Tempora.</p>
+        </article>
+        <article>
+            <h2>Necessitatibus deserunt harum velit!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Dolorum quam, impedit maiores aut voluptas dolore repellat recusandae aspernatur et minima in ad numquam unde doloribus nobis asperiores velit consequatur quos quae magni reiciendis deleniti quis ea esse. Perspiciatis?</p>
+        </article>
+        <article>
+            <h2>Distinctio iure eveniet laudantium!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Qui quas recusandae autem, delectus, porro explicabo expedita modi quam doloremque libero est quis adipisci iste iure numquam. Facilis provident sapiente excepturi ipsum nesciunt aut expedita tempore eligendi similique voluptates?</p>
+        </article>
+        <article>
+            <h2>Quidem quisquam vel autem!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Fuga doloribus deserunt modi quia repellendus adipisci quas at reprehenderit atque quis voluptatem inventore, nobis temporibus nostrum aliquid omnis cupiditate error ullam illum porro sit est maxime! Sapiente, debitis tempora?</p>
+        </article>
+        <article>
+            <h2>Necessitatibus aspernatur aliquam modi?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Dolorum nisi maiores animi qui quia, illum consequatur, eius ullam odit laudantium dicta, ab quas quo? Voluptatem excepturi, unde fugiat magni libero tenetur voluptas veniam nisi nam vel qui perferendis?</p>
+        </article>
+        <article>
+            <h2>Dicta impedit laudantium blanditiis?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Magnam adipisci aliquam praesentium deleniti, minus quas. Distinctio voluptatibus fuga, rem porro minima aliquam eum eos, eius quasi veritatis veniam voluptate qui suscipit perferendis culpa labore, dolores dolor iure deleniti.</p>
+        </article>
+        <article>
+            <h2>Nesciunt nemo voluptatum provident!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Corporis similique quidem incidunt quam. Ad sit delectus, expedita veniam laborum cupiditate quis dolore maxime in doloribus! Excepturi nisi ea animi qui, libero architecto molestiae voluptates illum quam soluta possimus!</p>
+        </article>
+        <article>
+            <h2>Eveniet rerum eius facere.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Cum quis recusandae maiores dolores veniam corrupti non rerum incidunt totam! Neque dolore placeat culpa omnis amet, enim numquam possimus qui atque excepturi reprehenderit labore voluptatibus quasi impedit aliquid nostrum?</p>
+        </article>
+        <article>
+            <h2>Ipsam optio cum eius?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Nulla architecto blanditiis quis asperiores eveniet harum sint nobis accusamus ut officiis praesentium voluptatem, neque reiciendis omnis veritatis consequuntur dolores iure corporis possimus debitis soluta voluptatibus! Quos excepturi illo dicta!</p>
+        </article>
+        <article>
+            <h2>Adipisci quae aliquam deserunt.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Nihil repudiandae reprehenderit quibusdam excepturi eum voluptatem saepe consequuntur nulla minima laudantium, laborum, nesciunt, officiis soluta. Deleniti itaque sit nihil ex maxime nostrum impedit, voluptatum corporis temporibus maiores voluptas et.</p>
+        </article>
+        <article>
+            <h2>Alias vitae modi doloremque?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Rerum quaerat sapiente voluptatem earum expedita sed quod officiis, nisi magnam, repellat ducimus laboriosam minima accusantium animi consequuntur modi alias excepturi quae, natus ipsa magni delectus! Sunt eligendi assumenda temporibus.</p>
+        </article>
+    </div>
+    
 </body>
 </html>
