--- a/resume/index.html
+++ b/resume/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resume</title>
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-    <nav>
-        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/">Home</a> |
-        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/projects/">Projects</a> |
-        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/resume/">Resume</a> |
-        <a href="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/contact/">Contact</a> |
-        <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
-    </nav>
-    <h3>Check out my Resume!</h3>
-  <iframe src="NadineMarcus_Resume.pdf" style="width:70%; height:1200px;"></iframe>
+  <nav>
+    <a href="/index.html">Home</a> |
+    <a href="/projects/index.html">Projects</a> |
+    <a href="/resume/index.html" class="current">Resume</a> |
+    <a href="/contact/index.html">Contact</a> |
+    <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
+  </nav>
+
+  <div class="resume">
+    <h2>Check out my Resume!</h2>
+    <iframe src="NadineMarcus_Resume.pdf"></iframe>
     <p>
-        <a href="NadineMarcus_Resume.pdf" target="_blank">
-            <button>View my Resume!</button>
-        </a>
+      <a href="NadineMarcus_Resume.pdf" target="_blank">
+        <button>View my Resume!</button>
+      </a>
     </p>
+  </div>
 </body>
 </html>
