--- a/contact/index.html
+++ b/contact/index.html
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="/style.css" />
+    <script src="/global.js" type="module"></script>
 </head>
 <body>
-    <nav>
-        <a href="/index.html">Home</a> |
-        <a href="/projects/index.html">Projects</a> |
-        <a href="/resume/index.html" target="_blank">Resume</a> |
-        <a href="/contact/index.html" class="current">Contact</a> |
-        <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
-    </nav>
     <h1>Contact</h1>
 <form action="mailto:nadinemarcus2002@gmail.com" method="POST" enctype="text/plain">
   <label>
