--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nadine Marcus: Personal site and portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="/global.js" type="module"></script>
 </head>
 <body>
-    <nav>
-        <a href="../" class="current">Home</a> |
-        <a href="projects/index.html">Projects</a> |
-        <a href="resume/index.html">Resume</a> |
-        <a href="contact/index.html">Contact</a> |
-        <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
-    </nav>
 
     <h1>Nadine Marcus</h1>
     <p>Girls U8 Soccer Coach, Associate Data Engineer, Incoming Data Science Master</p>
