--- a/projects/index.html
+++ b/projects/index.html
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="/style.css" />
+    <script src="/global.js" type="module"></script>
 </head>
 <body>
-    <nav>
-        <a href="/index.html">Home</a> |
-        <a href="/projects/index.html" class="current">Projects</a> |
-        <a href="/resume/index.html">Resume</a> |
-        <a href="/contact/index.html">Contact</a> |
-        <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
-    </nav>
     <h1>Projects Page</h1>
     <div class="projects">
         <article>
