--- a/resume/index.html
+++ b/resume/index.html
@@ -5,15 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume</title>
   <link rel="stylesheet" href="/style.css" />
+  <script src="/global.js" type="module"></script>
 </head>
 <body>
-  <nav>
-    <a href="/index.html">Home</a> |
-    <a href="/projects/index.html">Projects</a> |
-    <a href="/resume/index.html" class="current">Resume</a> |
-    <a href="/contact/index.html">Contact</a> |
-    <a href="https://github.com/nadinemarcus" target="_blank">GitHub</a>
-  </nav>
 
   <div class="resume">
     <h2>Check out my Resume!</h2>
