--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Nadine Marcus: Personal site and portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <script src="/global.js" type="module"></script>
+    <script src="index.js" type="module" defer></script>
 </head>
 <body>
 
@@ -15,5 +16,11 @@
     <img 
         src="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/images/wash_avocados.jpg"
         alt="Apparently, experts are now questioning whether we should wash avocados..." />
+
+    <h2>Latest Projects</h2>
+    <div class="projects">
+    <!-- Dynamically added content will appear here -->
+    </div>
+    <div id="profile-stats"></div>
 </body>
 </html>
