--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nadine Marcus: Personal site and portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="/global.js" type="module"></script>
+    <script src="./global.js" type="module"></script>
     <script src="index.js" type="module" defer></script>
 </head>
 <body>
 
     <h1>Nadine Marcus</h1>
-    <p>Girls U8 Soccer Coach, Associate Data Engineer, Incoming Data Science Master</p>
+    <p>Associate Data Engineer, Girls U8 Soccer Coach, Incoming Data Science Master</p>
 
     <img 
         src="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio.io/images/profile_pic.jpg" style="width: 300px; height: auto;"
