--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@
     <title>Projects</title>
     <link rel="stylesheet" href="../style.css" />
     <script src="../global.js" type="module"></script>
-    <script src="projects.js" type="module"></script>
+    <script src="./projects.js" type="module"></script>
 </head>
 <body>
     <h1>Projects Page</h1>
