--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nadine Marcus: Personal site and portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script src="./global.js" type="module"></script>
-    <script src="index.js" type="module" defer></script>
+    <script src="./index.js" type="module" defer></script>
 </head>
 <body>
 
@@ -14,7 +14,7 @@
     <p>Associate Data Engineer, Girls U8 Soccer Coach, Incoming Data Science Master</p>
 
     <img 
-        src="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio.io/images/profile_pic.jpg" style="width: 300px; height: auto;"
+        src="https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/images/profile_pic.jpg" style="width: 300px; height: auto;"
         alt="Apparently, experts are now questioning whether we should wash avocados..." />
 
     <h2>Latest Projects</h2>
